<resources>
    <string name="app_name">&appname;</string>
    <string name="powered_by">Powered by</string>
    <string name="website">Moshkou.com</string>
    <string name="title_status">Status</string>
    <string name="title_upload">Upload</string>
    <string name="title_brand">Brand</string>
    <string name="title_product">Product</string>
    <string name="title_reason">Reason</string>
    <string name="title_register">Register</string>
    <string name="title_activity_login">Sign in</string>
    <string name="title_activity_login_verification">Verification</string>
    <string name="title_activity_login_suspicious">Suspicious Login Attempt</string>
    <string name="title_activity_login_attempt">Suspicious Login Attempt</string>
    <string name="title_activity_alert">Oops</string>
    <string name="title_activity_filter">Filter</string>
    <string name="title_activity_billboard">Billboard</string>
    <string name="title_activity_media">Media</string>
    <string name="title_activity_main">@string/app_name</string>
    <string name="title_activity_preview">Preview</string>
    <string name="title_activity_carousel">Carousel</string>
    <string name="title_activity_help">Help</string>
    <string name="title_activity_contacts">Contacts</string>
    <string name="title_activity_profile">Profile</string>
    <string name="title_activity_activity">Activity</string>
    <string name="title_activity_bottom_navigation">BottomNavigationActivity</string>
    <string name="title_activity_camera">Camera</string>
    <string name="title_activity_group">Group</string>
    <string name="title_activity_calendar">Calendar</string>
    <string name="title_activity_booking">Booking</string>
    <string name="title_activity_booking_list">Booking</string>
    <string name="title_activity_map">Map</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_emergency">Emergency</string>
    <string name="title_search">Search</string>
    <string name="title_person">Person</string>
    <string name="title_camera">Camera</string>
    <string name="title_map">Map</string>
    <string name="title_state">State</string>
    <string name="title_city">City</string>
    <string name="title_address">Address</string>
    <string name="title_postcode">Postcode</string>
    <string name="title_media_owner">Media Owner</string>
    <string name="title_media_format">Format</string>
    <string name="title_advertiser">Advertiser</string>
    <string name="title_size">Size</string>
    <string name="title_format">Format</string>
    <string name="title_environment">Environment</string>
    <string name="title_lighting">Lighting</string>
    <string name="title_no_panels">No. of panels</string>
    <string name="title_speed_limit">Speed Limit</string>
    <string name="title_location_access">Location Service</string>
    <string name="title_location_permission">Location Permission</string>
    <string name="header_alert">Oops!!!</string>
    <string name="header_login">Welcome to &appname;</string>
    <string name="header_login_verification">Account Login Verification</string>
    <string name="header_login_suspicious">We Detected An Unusual Login Attempt</string>
    <string name="header_login_attempt">Was it you?</string>
    <string name="header_help">Need help?</string>
    <string name="header_permission_contacts">Access your contacts</string>
    <string name="hint_register">Please confirm your name, phone number and email address then tap Next.\nYou will receive account verification code shortly.</string>
    <string name="hint_login">Please confirm your phone number or email address then tap Next.\nYou will receive account verification code shortly.</string>
    <string name="hint_login_verification">Just to make sure the account belongs to you,\nwe have sent you account verification code.</string>
    <string name="hint_login_verification_request">You can request a code again in %s</string>
    <string name="hint_login_verification_resend">Click &lt;font color="#00a8e6"&gt;here&lt;/font&gt; to send you verification code.</string>
    <string name="hint_login_suspicious">To secure your account, we will send you a security code to verify your identity.</string>
    <string name="hint_login_attempt">Someone attempted to login to your account recently. If it wasn\'t you, tell us so we can verify your account.</string>
    <string name="hint_help">Don\'t bother about asking questions multiple times.</string>
    <string name="hint_help_call">Call and talk to a support agent</string>
    <string name="hint_permission_contacts">&appname; syncs only phone numbers from your address book to connect to other &appname; users.</string>
    <string name="hint_permission_camera">Set your profile picture and make a circle gallery.</string>
    <string name="hint_add_location">Move map then click the location button at center screen.</string>
    <string name="hint_fragment_media">Please make sure the billboard and the advertisement is clear and not dark/blurry.</string>
    <string name="hint_fragment_status">Upload media &amp; explain any suspicious matter and damage.</string>
    <string name="hint_fragment_location">Upload media &amp; explain any suspicious matter including damage.</string>
    <string name="hint_fragment_billboard">Upload media &amp; explain any suspicious matter including damage.</string>
    <string name="message_login_verification">Thanks for helping us to secure account from unauthorized access!</string>
    <string name="message_token_expired">Your credentials did not work, the credentials that were used to access to the user data and app services.\n\nFor security reasons you need to Login.</string>
    <string name="message_error_required_fields">Please fill up the fields.</string>
    <string name="message_error_required_location_access">Turn on Location Services.\nYour current location will be displayed on the map.</string>
    <string name="message_error_required_location_permission">&appname; needs permission to access Location Service.\nYour location is used to show on map.</string>
    <string name="message_error_required_verification_code">Please enter your verification code.</string>
    <string name="message_error_valid_phone_email">Please enter valid phone number or email.</string>
    <string name="message_error_valid_email">Valid email is required.</string>
    <string name="message_error_phone">Phone number is required.</string>
    <string name="message_error_valid_phone">Valid phone number is required.</string>
    <string name="message_error_password">Password is required.</string>
    <string name="message_error_valid_password">Your password must be between 6 and 16 characters.</string>
    <string name="message_error_camera">&appname; does not support your device camera.</string>
    <string name="message_error_required_media">Take picture or select from gallery.</string>
    <string name="message_error_required_brand_product">Brand &amp; Product are required.</string>
    <string name="message_error_required_status_reason">Status &amp; Reason are required.</string>
    <string name="placeholder_login_verification">Account Verification Code</string>
    <string name="placeholder_login">Phone or email</string>
    <string name="placeholder_phone">Phone Number</string>
    <string name="placeholder_password">Password</string>
    <string name="placeholder_email">Email</string>
    <string name="placeholder_name">Full Name</string>
    <string name="placeholder_bottom_holder_Info">Info</string>
    <string name="placeholder_bottom_holder_billboards">Billboards</string>
    <string name="placeholder_search">Billboard name, address &amp; advertiser</string>
    <string name="placeholder_search_hint_header">Search for</string>
    <string name="placeholder_search_hint_body">Type address, billboard and product name</string>
    <string name="placeholder_search_hint_nothing">No Item matched your search.\nTry to filter..</string>
    <string name="placeholder_media_owner">Write Media Owner</string>
    <string name="placeholder_format">Write Format</string>
    <string name="placeholder_size">Write Size</string>
    <string name="placeholder_advertiser">Advertiser</string>
    <string name="placeholder_location">LOCATION</string>
    <string name="placeholder_billboards">BILLBOARD</string>
    <string name="placeholder_media">MEDIA</string>
    <string name="placeholder_status">STATUS</string>
    <string name="placeholder_state">Write State</string>
    <string name="placeholder_brand">Write Brand</string>
    <string name="placeholder_product">Write Produce</string>
    <string name="placeholder_last_update">%1$s was last update.</string>
    <string name="placeholder_city">Write City</string>
    <string name="placeholder_address">Write the address</string>
    <string name="placeholder_postcode">Write Postcode</string>
    <string name="placeholder_environment">Write Environment</string>
    <string name="placeholder_billboard_details">Put the billboard details</string>
    <string name="placeholder_billboard_status">Write the status</string>
    <string name="placeholder_billboard_reason">Describe it</string>
    <string name="placeholder_digital_screen">It has digital screen</string>
    <string name="placeholder_lighting">It has lighting</string>
    <string name="placeholder_interesting">It is interesting</string>
    <string name="placeholder_camera">Take picture / video</string>
    <string name="placeholder_gallery">Choose from gallery</string>
    <string name="action_allow">Allow</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_ok">OK</string>
    <string name="action_call">Call</string>
    <string name="action_next">Next</string>
    <string name="action_done">Done</string>
    <string name="action_skip">SKIP</string>
    <string name="action_add_media">Add Media</string>
    <string name="action_upload_media">Upload Media</string>
    <string name="action_save">save</string>
    <string name="action_more">show more</string>
    <string name="action_less">show less</string>
    <string name="action_hide">hide</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_up">Sign up</string>
    <string name="action_exit">Exit</string>
    <string name="action_edit">Edit</string>
    <string name="action_edit_location">Edit Location</string>
    <string name="action_location">\tGo to the map</string>
    <string name="action_clear">Clear</string>
    <string name="action_login_button_1">Yahoo Mail</string>
    <string name="action_login_button_2">Gmail</string>
    <string name="action_login_button_3">Outlook</string>
    <string name="action_login_button_4">AOL</string>
    <string name="action_login">Have an account? Sign in</string>
    <string name="action_register">Don\'t have an account? Sign up</string>
    <string name="action_retro">retro</string>
    <string name="action_night">night</string>
    <string name="action_grayscale">grayscale</string>
    <string name="action_no_poi_and_transit">no POIs or transit</string>
    <string name="action_default">default</string>
    <string name="action_snapshot">snapshot</string>
    <string name="action_normal">normal</string>
    <string name="action_hybrid">hybrid</string>
    <string name="action_satellite">satellite</string>
    <string name="action_train">train</string>
    <string name="action_heatmap">heatmap</string>
    <string name="action_heatmap_remove">heatmap_remove</string>
    <string name="action_heatmap_opacity">heatmap_opacity</string>
    <string name="action_link_help_center">Help Center</string>
    <string name="action_link_update_payment_method">Update Payment Method</string>
    <string name="action_link_update_password">Update Password</string>
</resources>