<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        android:id="@+id/appBar"
        layout="@layout/toolbar_map" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:scrollbars="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="20dp">

            <TextView
                android:id="@+id/textView40"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_state"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="16dp" />

            <AutoCompleteTextView
                android:id="@+id/auto_complete_state"
                android:layout_width="match_parent"
                android:layout_height="43dp"
                android:hint="@string/placeholder_state"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="35dp" />

            <TextView
                android:id="@+id/textView38"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/title_city"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="16dp" />

            <AutoCompleteTextView
                android:id="@+id/auto_complete_city"
                android:layout_width="match_parent"
                android:layout_height="43dp"
                android:hint="@string/placeholder_city"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="35dp" />

            <TextView
                android:id="@+id/textView37"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/title_media_owner"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="16dp" />

            <AutoCompleteTextView
                android:id="@+id/auto_complete_media_owner"
                android:layout_width="match_parent"
                android:layout_height="43dp"
                android:hint="@string/placeholder_media_owner"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="35dp" />

            <TextView
                android:id="@+id/textView36"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/title_format"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="16dp" />

            <AutoCompleteTextView
                android:id="@+id/auto_complete_format"
                android:layout_width="match_parent"
                android:layout_height="43dp"
                android:hint="@string/placeholder_format"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="35dp" />

            <TextView
                android:id="@+id/textView35"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/title_advertiser"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="16dp" />

            <AutoCompleteTextView
                android:id="@+id/auto_complete_advertiser"
                android:layout_width="match_parent"
                android:layout_height="43dp"
                android:hint="@string/placeholder_advertiser"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="35dp" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>