<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:scrollbars="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_weight="3"
            android:contentDescription="@string/app_name"
            android:focusable="true"
            android:focusableInTouchMode="true"
            app:srcCompat="@drawable/ic_fingerprint" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="top|center_horizontal"
            android:layout_weight="11"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/header_help"
                style="@style/headerText"/>

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/hint_help"
                style="@style/bodyText"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_gravity="bottom|center_horizontal"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="4dp"
                android:background="@android:color/darker_gray"
                android:text="@string/action_link_help_center" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_gravity="bottom|center_horizontal"
                android:layout_marginBottom="4dp"
                android:background="@android:color/darker_gray"
                android:text="@string/action_link_update_payment_method" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_gravity="bottom|center_horizontal"
                android:layout_marginBottom="4dp"
                android:background="@android:color/darker_gray"
                android:text="@string/action_link_update_password" />

            <TextView
                android:id="@+id/error"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textColor="@color/error" />

            <Button
                android:id="@+id/signin"
                android:layout_width="200dp"
                android:layout_height="40dp"
                android:layout_gravity="bottom|center_horizontal"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="50dp"
                android:background="@color/info"
                android:text="@string/action_call" />

        </LinearLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <TextView
                android:id="@+id/signup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hint_help_call"
                style="@style/footerText"/>
        </FrameLayout>

    </LinearLayout>
</ScrollView>