<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.LocationFragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="88dp"
        app:cardCornerRadius="0dp"
        app:cardElevation="4dp">

        <TextView
            android:id="@+id/text_hint"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="4dp"
            android:gravity="center_vertical"
            android:padding="8dp"
            android:text="@string/hint_fragment_billboard"
            android:textSize="16sp" />
    </androidx.cardview.widget.CardView>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/cardView"
        android:fillViewport="true"
        android:scrollbars="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="12dp"
            android:paddingTop="12dp"
            android:paddingEnd="12dp"
            android:paddingBottom="66dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_address" />

            <EditText
                android:id="@+id/text_edit_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="0dp"
                android:layout_marginTop="0dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="12dp"
                android:background="@drawable/bg_placeholder_search"
                android:gravity="top|start"
                android:hint="@string/placeholder_address"
                android:inputType="textCapSentences|textMultiLine"
                android:isScrollContainer="true"
                android:maxLength="254"
                android:maxLines="4"
                android:singleLine="false" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_state" />

            <com.moshkou.md.controls.AutoCompleteTextViewControl
                android:id="@+id/auto_complete_state"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:layout_marginBottom="12dp"
                android:background="@drawable/bg_placeholder_search"
                android:hint="@string/placeholder_state"
                android:lines="1"
                android:singleLine="true" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_city" />

            <com.moshkou.md.controls.AutoCompleteTextViewControl
                android:id="@+id/auto_complete_city"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:layout_marginBottom="12dp"
                android:background="@drawable/bg_placeholder_search"
                android:hint="@string/placeholder_city"
                android:lines="1"
                android:singleLine="true" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_postcode" />

            <EditText
                android:id="@+id/text_edit_postcode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="0dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/bg_placeholder_search"
                android:hint="@string/placeholder_postcode"
                android:inputType="number"
                android:lines="1"
                android:maxLength="5"
                android:singleLine="true" />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>