<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:scrollbars="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_weight="3"
            android:contentDescription="@string/app_name"
            app:srcCompat="@drawable/ic_error" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="top|center_horizontal"
            android:layout_weight="11"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/header_alert"
                style="@style/headerText"/>

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/message_token_expired"
                style="@style/bodyText"/>

            <Button
                android:id="@+id/sign_in_button"
                android:layout_width="200dp"
                android:layout_height="40dp"
                android:layout_gravity="bottom|center_horizontal"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="50dp"
                android:background="@android:color/darker_gray"
                android:text="@string/action_sign_in" />

        </LinearLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/message_login_verification"
                style="@style/footerText"/>
        </FrameLayout>


    </LinearLayout>
</ScrollView>