<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:scrollbars="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="110dp"
                android:layout_gravity="center"
                android:contentDescription="@string/app_name"
                app:srcCompat="@drawable/ic_notifications" />

            <TextView
                android:id="@+id/textView3"
                style="@style/headerText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/header_alert" />

            <TextView
                android:id="@+id/textView4"
                style="@style/bodyText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/message_token_expired" />

            <Button
                android:id="@+id/sign_in_button"
                android:layout_width="200dp"
                android:layout_height="40dp"
                android:layout_gravity="bottom|center_horizontal"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="50dp"
                android:background="@android:color/darker_gray"
                android:text="@string/action_sign_in" />

        </LinearLayout>


    </FrameLayout>
</ScrollView>